--- a/styles/Layouts/FeedLayout.module.css
+++ b/styles/Layouts/FeedLayout.module.css
@@ -1,6 +1,6 @@
 .feedSection {
-	width: 600px;
-	max-width: 100%;
+	max-width: 600px;
+	width: 100%;
 }
 
 .profileFeed {
