--- a/styles/Navbar/Nav.module.css
+++ b/styles/Navbar/Nav.module.css
@@ -2,10 +2,10 @@
 	padding: 16px 0;
 	background-color: #35ce8d;
 	font-family: "Roboto", sans-serif;
-	width: 100vw;
 	position: sticky;
 	top: 0;
 	z-index: 2;
+	overflow: hidden;
 }
 
 .navBar {
@@ -13,9 +13,8 @@
 	justify-content: space-between;
 	align-items: center;
 	color: white;
-	width: 100%;
 	max-width: 1000px;
-	margin: auto;
+	width: 100%;
 }
 
 @media only screen and (max-width: 1000px) {
