--- a/styles/Navbar/NavCenter.module.css
+++ b/styles/Navbar/NavCenter.module.css
@@ -1,11 +1,6 @@
-.dailyMessage{
+.dailyMessage {
+	font-size: 25px;
+	font-weight: 600;
 	text-align: center;
-	width: 100%;
 	margin: 0;
-}
-
-@media only screen and (max-width: 700px) {
-	.dailyMessage{
-		display: none;
-	}
 }
