--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,19 +16,12 @@ font-family: 'Roboto', sans-serif;
 
 html,
 body {
-	padding: 0;
-	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	background-color: #f0f2f5;
 	height: 100%;
 	width: 100%;
-	overflow-x: hidden;
 }
-
-/* body {
-	overflow-x: hidden;
-} */
 
 a {
 	color: inherit;
